[metadata]
name = datavalid
version = 0.0.1
author = Khoi Pham
author_email = pckhoi@gmail.com
description = Data validation library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pckhoi/datavalid
project_urls =
    Bug Tracker = https://github.com/pckhoi/datavalid/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = datavalid
python_requires = >=3.8
install_requires =
    numpy >= 1.18
    pandas >= 1.2
    pyyaml >= 5.4.1
    termcolor >= 1.1.0